--- a/dsh/auto-motion/calc_PLI2019.html
+++ b/dsh/auto-motion/calc_PLI2019.html
@@ -16,6 +16,7 @@
 		<link href="https://fonts.googleapis.com/css?family=Heebo:400,500,700|Fira+Sans:600" rel="stylesheet">
 		<link rel="stylesheet" href="dist/css/style.css">
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+		<link rel="stylesheet" href="https://www.openasapp.net/styles/snippet.css" />
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js">    
 	
@@ -157,8 +158,9 @@ body, html {
 <div id="main">
   <span style="font-size:18px;cursor:pointer" onclick="openNav()">&#9776; Menu</span>
 </div><center>
-  <h2>Kalkulatar Pengiraan Pendapatan Garis Kemiskinan (PGK)</h2>  
-	  <iframe src="https://webclient.openasapp.net/portal#!/client/app/6438dc51-98fc-4edb-acfc-2cc97c406850?disablePageTopArea=true&disableMenu=true" width="90%" height="1900"></iframe>
+  <h2>Kalkulatar Pengiraan Pendapatan Garis Kemiskinan (PGK)</h2>
+	<p>Corak perbelanjaan dan keperluan asas isi rumah berpendapatan rendah yang diperoleh melalui Survei Perbelanjaan Isi Rumah (HES) 2019.  Jumlah PGK adalah hasil tambah PGK makanan dan bukan makanan. Sesebuah isi rumah dikategorikan sebagai miskin mutlak jika pendapatan keseluruhan isi rumahnya berada di bawah paras nilai PGK manakala isi rumah dikategorikan sebagai miskin tegar jika pendapatan keseluruhan isi rumahnya berada di bawah paras nilai PGK makanan.  Berdasarkan metodologi 2019 ini, nilai purata PGK di peringkat nasional ialah RM2,208 sebulan berbanding RM980 sebulan pada tahun 2016. Manakala purata nilai PGK makanan adalah RM1,038 sebulan dengan purata saiz isi rumah seramai 3.9 orang. </p><br>
+	  <iframe src="https://webclient.openasapp.net/portal#!/client/app/bf3bc248-763a-4ca5-a7c5-6baa02efa1e5?disablePageTopArea=true&disableMenu=true" width="95%" height="1900"></iframe>
 	</center>
  
  <script>
