--- a/dsh/auto-motion/calc_PLI2019.html
+++ b/dsh/auto-motion/calc_PLI2019.html
@@ -159,11 +159,11 @@ body, html {
   <span style="font-size:18px;cursor:pointer" onclick="openNav()">&#9776; Menu</span>
 </div><center>
   <h2>Kalkulatar Pengiraan Pendapatan Garis Kemiskinan (PGK)</h2>
-	<div class="col-sm-2"> </div>
-  <div class="col-sm-8"><p>Corak perbelanjaan dan keperluan asas isi rumah berpendapatan rendah yang diperoleh melalui Survei Perbelanjaan Isi Rumah (HES) 2019.  Jumlah PGK adalah hasil tambah PGK makanan dan bukan makanan. Sesebuah isi rumah dikategorikan sebagai miskin mutlak jika pendapatan keseluruhan isi rumahnya berada di bawah paras nilai PGK manakala isi rumah dikategorikan sebagai miskin tegar jika pendapatan keseluruhan isi rumahnya berada di bawah paras nilai PGK makanan.  Berdasarkan metodologi 2019 ini, nilai purata PGK di peringkat nasional ialah RM2,208 sebulan berbanding RM980 sebulan pada tahun 2016. Manakala purata nilai PGK makanan adalah RM1,038 sebulan dengan purata saiz isi rumah seramai 3.9 orang. </p></div>
-  <div class="col-sm-2"> </div>
+	<div class="col-sm-1"> </div>
+  <div class="col-sm-10"><p>Corak perbelanjaan dan keperluan asas isi rumah berpendapatan rendah yang diperoleh melalui Survei Perbelanjaan Isi Rumah (HES) 2019.  Jumlah PGK adalah hasil tambah PGK makanan dan bukan makanan. Sesebuah isi rumah dikategorikan sebagai miskin mutlak jika pendapatan keseluruhan isi rumahnya berada di bawah paras nilai PGK manakala isi rumah dikategorikan sebagai miskin tegar jika pendapatan keseluruhan isi rumahnya berada di bawah paras nilai PGK makanan. </p></div>
+  <div class="col-sm-1"> </div>
 	<br>
-	  <iframe src="https://webclient.openasapp.net/portal#!/client/app/bf3bc248-763a-4ca5-a7c5-6baa02efa1e5?disablePageTopArea=true" width="90%" height="3000"></iframe>
+	  <iframe src="https://webclient.openasapp.net/portal#!/client/app/bf3bc248-763a-4ca5-a7c5-6baa02efa1e5?disablePageTopArea=true" width="90%" height="2700"></iframe>
 	</center>
  
  <script>
