--- a/dsh/auto-motion/calc_PLI2019.html
+++ b/dsh/auto-motion/calc_PLI2019.html
@@ -125,13 +125,14 @@ body, html {
   <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
   <a href="https://ukkdosm.github.io/dsh/auto-motion/" >Home</a>
   <a data-toggle="modal" data-target="#myModal">Pasukan</a>
+  <a data-toggle="modal" data-target="#myModal2">Pengiraan</a>
   <a href="https://www.dosm.gov.my/v1/index.php">DOSM</a>
   <div class="container">
   
 </div>
 </div>
 
-<!-- Modal -->
+<!-- Modal-01 -->
   <div class="modal fade" id="myModal" role="dialog">
     <div class="modal-dialog modal-lg">
       <div class="modal-content">
@@ -148,6 +149,37 @@ body, html {
 				<strong>SOURCE:</strong><br><i> Penemuan Utama Survei Pendapatan & Perbelanjaan Isi Rumah dan Kemudahan Asas (HIES & BA) 2019</i></p>
 				
         </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+        </div>
+      </div>
+    </div>
+  </div>
+	
+<!-- Modal-01 -->
+  <div class="modal fade" id="myModal2" role="dialog">
+    <div class="modal-dialog modal-lg">
+      <div class="modal-content">
+        <div class="modal-header">
+          <button type="button" class="close" data-dismiss="modal">&times;</button>
+          <h4 class="modal-title">Pasukan Khas</h4>
+        </div>
+        <div class="modal-body">
+          <h3>Metodologi Pendapatan Garis Kemiskinan (PGK) </h3>
+		  <p>Perbezaan utama Metodologi 2005 dan 2019 adalah keperluan optimum dan  pemakanan sihat serta keperluan asas berkualiti</p><hr>
+
+		<h4>METODOLOGI 2005</h4>
+		<b>PGK makanan</b> <ul>- Penentuan item makanan berdasarkan kepada <b>keperluan minimum</b> bagi setiap ahli isi rumah</ul> 
+		<b>PGK bukan makanan</b> <ul>- Pemilihan item bukan makanan adalah  berdasarkan kepada corak perbelanjaan isi rumah  terendah 20 peratus (B20) dalam Survei  Perbelanjaan Isi Rumah (HES) 2004/2005</ul>
+<ul>- Jumlah item bukan makanan yang terlibat adalah
+<b>106 item</b></ul><hr>
+				<h4>METODOLOGI 2019</h4> <div id="div1" class="fa"></div>
+		<b>PGK makanan</b> <ul>- Penentuan item makanan berdasarkan kepada <b>keperluan optimum dan pemakanan yang sihat</b>  bagi setiap ahli isi rumah.</ul> 
+		<b>PGK bukan makanan</b> <ul>- Pemilihan item bukan makanan adalah  berdasarkan kepada corak perbelanjaan isi rumah  terendah 20 peratus (B20) dalam Survei  Perbelanjaan Isi Rumah (HES) 2019.</ul>
+<ul>- Jumlah item bukan makanan yang terlibat adalah<b>146 item</b></ul><hr>
+				
+        </div>
+
         <div class="modal-footer">
           <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
         </div>
@@ -194,6 +226,19 @@ function closeNav() {
   document.getElementById("main").style.marginLeft= "0";
 }
 
+	 function ratestar() {
+  var a;
+  a = document.getElementById("div1");
+  a.innerHTML = "&#xf006;";
+  setTimeout(function () {
+      a.innerHTML = "&#xf123;";
+    }, 1000);
+  setTimeout(function () {
+      a.innerHTML = "&#xf005;";
+    }, 2000);
+}
+ratestar();
+setInterval(ratestar, 3000);
 </script>
    
 </body>
