--- a/dsh/auto-motion/calc_PLI2019.html
+++ b/dsh/auto-motion/calc_PLI2019.html
@@ -162,21 +162,19 @@ body, html {
       <div class="modal-content">
         <div class="modal-header">
           <button type="button" class="close" data-dismiss="modal">&times;</button>
-          <h4 class="modal-title">Pasukan Khas</h4>
+          <h4 class="modal-title">Metodologi Pendapatan Garis Kemiskinan (PGK) </h4>
         </div>
         <div class="modal-body">
-          <h3>Metodologi Pendapatan Garis Kemiskinan (PGK) </h3>
-		  <p>Perbezaan utama Metodologi 2005 dan 2019 adalah keperluan optimum dan  pemakanan sihat serta keperluan asas berkualiti</p><hr>
+		  <p>Perbezaan utama Metodologi 2005 dan 2019 adalah keperluan optimum dan  pemakanan sihat serta keperluan asas berkualiti.</p><hr>
 
 		<h4>METODOLOGI 2005</h4>
-		<b>PGK makanan</b> <ul>- Penentuan item makanan berdasarkan kepada <b>keperluan minimum</b> bagi setiap ahli isi rumah</ul> 
-		<b>PGK bukan makanan</b> <ul>- Pemilihan item bukan makanan adalah  berdasarkan kepada corak perbelanjaan isi rumah  terendah 20 peratus (B20) dalam Survei  Perbelanjaan Isi Rumah (HES) 2004/2005</ul>
-<ul>- Jumlah item bukan makanan yang terlibat adalah
-<b>106 item</b></ul><hr>
+		<b>PGK makanan</b> <ul>- Penentuan item makanan berdasarkan kepada <b>keperluan minimum</b> bagi setiap ahli isi rumah.</ul> 
+		<b>PGK bukan makanan</b> <ul>- Pemilihan item bukan makanan adalah  berdasarkan kepada corak perbelanjaan isi rumah  terendah 20 peratus (B20) dalam Survei  Perbelanjaan Isi Rumah (HES) 2004/2005.</ul>
+<ul>- Jumlah item bukan makanan yang terlibat adalah<b>106 item</b>.</ul><hr>
 				<h4>METODOLOGI 2019</h4> <div id="div1" class="fa"></div>
 		<b>PGK makanan</b> <ul>- Penentuan item makanan berdasarkan kepada <b>keperluan optimum dan pemakanan yang sihat</b>  bagi setiap ahli isi rumah.</ul> 
 		<b>PGK bukan makanan</b> <ul>- Pemilihan item bukan makanan adalah  berdasarkan kepada corak perbelanjaan isi rumah  terendah 20 peratus (B20) dalam Survei  Perbelanjaan Isi Rumah (HES) 2019.</ul>
-<ul>- Jumlah item bukan makanan yang terlibat adalah<b>146 item</b></ul><hr>
+<ul>- Jumlah item bukan makanan yang terlibat adalah<b>146 item</b>.</ul><hr>
 				
         </div>
 
