--- a/dsh/auto-motion/index.html
+++ b/dsh/auto-motion/index.html
@@ -131,7 +131,7 @@
 	<div>
 	<button>
     <a href="https://ukkdosm.github.io/dsh/auto-motion/calc_PLI2019.html" target="_blank">Pengiraan PGK</a></button><button>
-    <a href="https://ukkdosm.github.io/dsh/chartjs/index.html" target="_blank">Visualization</a></button><br><br>
+    <a href="https://ukkdosm.github.io/dsh/auto-motion/viz_pgk.html" target="_blank">Visualization</a></button><br><br>
 		<small>design by CTDA@DOSM</a></small>
 	</div>
 
