--- a/dsh/auto-motion/viz_pgk.html
+++ b/dsh/auto-motion/viz_pgk.html
@@ -182,7 +182,7 @@ body, html {
 <button class="tablink" onclick="openPage('Home', this, 'red')"id="defaultOpen">Pengenalan PGK</button>
 <button class="tablink" onclick="openPage('News', this, 'green')" >Kalkulator Pengiraan</button>
 <button class="tablink" onclick="openPage('Contact', this, 'blue')">Status Kemiskinan</button>
-<button class="tablink" onclick="openPage('Contact', this, 'orange')">Taburan Pendapatan</button>
+<button class="tablink" onclick="openPage('About', this, 'orange')">Taburan Pendapatan</button>
 	
 <div id="Home" class="tabcontent">
   <p><h4 class="modal-title">Metodologi Pendapatan Garis Kemiskinan (PGK) </h4>
