--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
         <main>
 <section class="hero">
                 
-				            <!-- countdown -->
+				            <!-- countdown 
             <section class="countdown">
                 <div class="container">                           
                                 <p class="hero-title mt-0">BAKI HARI PELAKSANAAN BANCI PENDUDUK & PERUMAHAN 2020</p>		
@@ -111,7 +111,7 @@ var x = setInterval(function() {
 </script>
 
                 </div>
-            </section>
+            </section>-->
 			<div class="container">
                     <div class="hero-inner">
 						<div class="hero-copy">
