--- a/index.html
+++ b/index.html
@@ -29,7 +29,8 @@
 
   gtag('config', 'UA-155273911-1');
 </script>
-
+	<!-- myketapang - Google Adsense -->
+<script data-ad-client="ca-pub-3955015766748354" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 
 </head>
 <body class="is-boxed has-animations">
