--- a/dsh/auto-motion/calc_PLI2019.html
+++ b/dsh/auto-motion/calc_PLI2019.html
@@ -193,7 +193,7 @@ body, html {
   <div class="col-sm-10"><p>Corak perbelanjaan dan keperluan asas isi rumah berpendapatan rendah yang diperoleh melalui Survei Perbelanjaan Isi Rumah (HES) 2019.  Jumlah PGK adalah hasil tambah PGK makanan dan bukan makanan. Sesebuah isi rumah dikategorikan sebagai miskin mutlak jika pendapatan keseluruhan isi rumahnya berada di bawah paras nilai PGK manakala isi rumah dikategorikan sebagai miskin tegar jika pendapatan keseluruhan isi rumahnya berada di bawah paras nilai PGK makanan. </p></div>
   <div class="col-sm-1"> </div>
 	<br>
-	  <iframe src="https://webclient.openasapp.net/portal#!/client/app/bf3bc248-763a-4ca5-a7c5-6baa02efa1e5" width="98%" height="2825"></iframe>
+	  <iframe src="https://webclient.openasapp.net/portal#!/client/app/980e21d5-59f9-44e2-be21-00a6f6f4fe3b?disablePageTopArea=true&disableMenu=true" width="98%" height="3000"></iframe>
 	</center>
  
  <script>
