--- a/index.html
+++ b/index.html
@@ -28,10 +28,12 @@
   gtag('js', new Date());
 
   gtag('config', 'UA-155273911-1');
+	
 </script>
 	<!-- myketapang - Google Adsense -->
 
-<script data-ad-client="ca-pub-9760879336885285" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+	<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9760879336885285"
+     crossorigin="anonymous"></script>
 
 </head>
 <body class="is-boxed has-animations">
