--- a/index.html
+++ b/index.html
@@ -30,10 +30,9 @@
   gtag('config', 'UA-155273911-1');
 	
 </script>
-	<!-- myketapang - Google Adsense -->
 
-	<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9760879336885285"
-     crossorigin="anonymous"></script>
+<!-- myketapang - Google Adsense -->
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9760879336885285" crossorigin="anonymous"></script>
 
 </head>
 <body class="is-boxed has-animations">
