--- a/priceMCO.html
+++ b/priceMCO.html
@@ -32,7 +32,10 @@
 <html>
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1">
+</script>
 
+<!-- myketapang - Google Adsense -->
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9760879336885285" crossorigin="anonymous"></script>
 </head>
 <body>
 <center> <h2>Harga Purata Item/ Barangan Makanan Terpilih</h2>
