--- a/dsh/auto-motion/index.html
+++ b/dsh/auto-motion/index.html
@@ -34,6 +34,8 @@
   gtag('config', 'UA-155273911-1');
 </script>
 
+	<!-- myketapang - Google Adsense -->
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9760879336885285" crossorigin="anonymous"></script>
 </head>
 <body>
 <!-- partial:index.partial.html -->
