--- a/dsh/auto-motion/calc_PLI2019.html
+++ b/dsh/auto-motion/calc_PLI2019.html
@@ -118,6 +118,8 @@ body, html {
 }
 
 </style>
+	<!-- myketapang - Google Adsense -->
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9760879336885285" crossorigin="anonymous"></script>
 </head>
 <body>
 
