--- a/maps/HC-malaysia.html
+++ b/maps/HC-malaysia.html
@@ -38,6 +38,8 @@
         color: gray;
     }
  </style>
+	<!-- myketapang - Google Adsense -->
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9760879336885285" crossorigin="anonymous"></script>
 </head>
 <body>
 <div id="container"></div>
