--- a/maps/scovidq8-2903.html
+++ b/maps/scovidq8-2903.html
@@ -39,6 +39,8 @@
 
 
  </style>
+	<!-- myketapang - Google Adsense -->
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9760879336885285" crossorigin="anonymous"></script>
 </head>
 <body>
 
