--- a/subnasional/subnasional.html
+++ b/subnasional/subnasional.html
@@ -41,6 +41,8 @@ body, html {
   height: 100%;
 }
 </style>
+  <!-- myketapang - Google Adsense -->
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9760879336885285" crossorigin="anonymous"></script>
 </head>
 <body>
 
